// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideTab should render set mix options correctly 1`] = `
<div class="fx-side-tab">
  <ul class="fx-side-tab_list">
    <li class="fx-side-tab_item active">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <icon-stub icon="CheckSquareFilled" size="0" width="0" height="0"></icon-stub> <span class="fx-side-tab_item-text">买过</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item active-next">
      <badge-stub content="惠" maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">秒杀</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">天天半价工作餐</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="1" maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">套餐</span>
      </badge-stub>
    </li>
  </ul>
</div>
`;

exports[`SideTab should render set options correctly 1`] = `
<div class="fx-side-tab">
  <ul class="fx-side-tab_list">
    <li class="fx-side-tab_item active">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">空调</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item active-next">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">冰箱</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">洗衣机</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">热水器</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">洗碗机</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">油烟机</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">煤气灶</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">蒸烤机</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">电饭锅</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">电磁炉</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">净水器</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">净化器</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">电风扇</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">干衣机</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">电暖气</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">加湿器</span>
      </badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub maxcount="99" offset="0,0" class="fx-side-tab_item-inner">
        <!----> <span class="fx-side-tab_item-text">吸尘器</span>
      </badge-stub>
    </li>
  </ul>
</div>
`;
